--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,11 @@
-gym==0.21.0
+gymnasium==0.29.1
 x_transformers==0.27.1
 tokenizers
 torch
+torchvision
 hydra-core
 dm-tree
 Pillow
 transformers
 kornia
-minedojo @ git+https://github.com/MineDojo/MineDojo
+# minedojo @ git+https://github.com/MineDojo/MineDojo  # optional: only needed for dense reward wrappers
